Fix master address, token name and abi

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ Thumbs.db
 .db.db.*
 
 
+var/cache/diskstore-1fe/a8fc1c270a6a5ab7946b8c31bf158.json
+var/cache/diskstore-275/ba489d4293ba405148fb2e3064e01.json
+var/cache/diskstore-7cc/fe671208c76cfbb54c08b94ebc7d7.json
